2001-11-16  Tsutomu Okada <okada@furuno.co.jp>

	* file.c (HTMLtagproc1): [w3m-dev 02408] meta refresh
	   use MetaRefresh
	   add case refresh > 0
	* fm.h: 
	   add MetaRefresh
	   move alarm related definition from main.c
	* main.c: 
	   move alarm releated definition to fm.h
	   (SigAlarm): alarm_once
	* rc.c: 
	   add CMT_META_REFRESH

	* file.c (loadHTMLBuffer): [w3m-dev 02415] 
	  pushText() to clean up temporary files
	
	* file.c (loadHTMLstream): [w3m-dev 02414]
	  SETJMP and signal after buffer is initialized
	
	* main.c (reMark): [w3m-dev 02413] 
	  don't save invalid regexp to MarkString

2001-11-15  aito@eie.yz.yamagata-u.ac.jp

	* release-0-2-2
	* Update to w3m-0.2.1-inu-1.6
	
2001-11-09  aito@eie.yz.yamagata-u.ac.jp

	* release-0-2-1-inu-1-5
	* Updates from 0.2.1 into 0.2.1-inu-1.5
	
2001-11-08  aito@eie.yz.yamagata-u.ac.jp

	* release-0-2-1
	* import w3m-0.2.1
